enable jsonp only when geoserver is started through cartaro startup scripts
git-svn-id: http://svn.osgeo.org/osgeo/livedvd/gisvm/trunk@10375 7da46fd8-bd2a-0410-a152-cf9810cf5b10